@@ -1649,7 +1649,7 @@ makeargvobject(int argc, char **argv)
 }
 
 void
-PySys_SetArgv(int argc, char **argv)
+PySys_SetArgvEx(int argc, char **argv, int updatepath)
 {
 #if defined(HAVE_REALPATH)
     char fullpath[MAXPATHLEN];
@@ -1662,7 +1662,7 @@ PySys_SetArgv(int argc, char **argv)
         Py_FatalError("no mem for sys.argv");
     if (PySys_SetObject("argv", av) != 0)
         Py_FatalError("can't assign sys.argv");
-    if (path != NULL) {
+    if (updatepath && path != NULL) {
         char *argv0 = argv[0];
         char *p = NULL;
         Py_ssize_t n = 0;
@@ -1750,6 +1750,12 @@ PySys_SetArgv(int argc, char **argv)
         Py_DECREF(a);
     }
     Py_DECREF(av);
+}
+
+void
+PySys_SetArgv(int argc, char **argv)
+{
+    PySys_SetArgvEx(argc, argv, 1);
 }
 
 
