@@ -18,6 +18,14 @@ Core and Builtins
 - Issue #7079: Fix a possible crash when closing a file object while using
   it from another thread.  Patch by Daniel Stutzbach.
 
+C-API
+-----
+
+- Issue #5753: A new C API function, :cfunc:`PySys_SetArgvEx`, allows
+  embedders of the interpreter to set sys.argv without also modifying
+  sys.path.  This helps fix `CVE-2008-5983
+  <http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2008-5983>`_.
+
 Library
 -------
 
